<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="528dp"
        android:layout_height="274dp"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_centerInParent="true"
        android:paddingLeft="24dp"
        android:paddingRight="24dp"
        android:background="@drawable/login_area_bg">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_title"
            android:textSize="26sp"
            android:gravity="center"
            android:layout_marginBottom="24dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="344dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginRight="32dp">

                <EditText
                    android:id="@+id/username"
                    style="@style/LoginEdit"
                    android:hint="@string/prompt_username"
                    android:drawableLeft="@drawable/icon_user"
                    android:inputType="text"
                    android:layout_marginBottom="22dp"/>

                <EditText
                    android:id="@+id/password"
                    style="@style/LoginEdit"
                    android:hint="@string/prompt_password"
                    android:drawableLeft="@drawable/icon_password"
                    android:imeActionId="6"
                    android:imeActionLabel="@string/action_sign_in"
                    android:imeOptions="actionUnspecified"
                    android:inputType="textPassword" />
            </LinearLayout>
            <LinearLayout
                android:id="@+id/sign_in_button"
                android:layout_width="104dp"
                android:layout_height="110dp"
                android:gravity="center"
                android:background="@drawable/login_btn_bg">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawableTop="@drawable/icon_login_btn"
                    android:drawablePadding="4dp"
                    android:text="@string/text_login"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    android:gravity="center"/>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <ProgressBar
        android:id="@+id/login_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="gone" />
</RelativeLayout>
